# ChangeLog for net-misc/clusterssh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/clusterssh/ChangeLog,v 1.18 2013/04/25 15:18:00 jlec Exp $

  25 Apr 2013; Justin Lecher <jlec@gentoo.org> -clusterssh-4.01.01.ebuild,
  clusterssh-4.01.05.ebuild, clusterssh-9999.ebuild:
  Dorp old, add missing dep on x11-terms/xterm

  06 Apr 2013; Agostino Sarubbo <ago@gentoo.org> clusterssh-4.01.05.ebuild:
  Stable for x86, wrt bug #464814

  06 Apr 2013; Agostino Sarubbo <ago@gentoo.org> clusterssh-4.01.05.ebuild:
  Stable for amd64, wrt bug #464814

*clusterssh-4.01.05 (16 Mar 2013)

  16 Mar 2013; Justin Lecher <jlec@gentoo.org> clusterssh-4.01.01.ebuild,
  +clusterssh-4.01.05.ebuild, clusterssh-9999.ebuild:
  Version BUmp

  14 Jan 2013; Justin Lecher <jlec@gentoo.org> -clusterssh-3.28.ebuild:
  Drop old, fix #426810

  25 Dec 2012; Agostino Sarubbo <ago@gentoo.org> clusterssh-4.01.01.ebuild:
  Stable for x86, wrt bug #447672

  25 Dec 2012; Agostino Sarubbo <ago@gentoo.org> clusterssh-4.01.01.ebuild:
  Stable for amd64, wrt bug #447672

  23 Dec 2012; Justin Lecher <jlec@gentoo.org> clusterssh-4.01.01.ebuild:
  Add missing new test dep, #447884

  18 Dec 2012; Justin Lecher <jlec@gentoo.org> -clusterssh-3.26.ebuild,
  -clusterssh-4.00_pre06.ebuild, -clusterssh-4.00_pre11.ebuild,
  clusterssh-4.01.01.ebuild, +files/clusterssh-4.01.01-testfix-1.patch,
  metadata.xml:
  Drop old; Fix tests, #430664

  02 Mar 2012; Ultrabug <ultrabug@gentoo.org> clusterssh-4.01.01.ebuild:
  Fix RDEPEND #406001 thx to Drunkard Zhang

*clusterssh-4.01.01 (26 Feb 2012)

  26 Feb 2012; Justin Lecher <jlec@gentoo.org> +clusterssh-4.01.01.ebuild:
  Version Bump

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> clusterssh-3.28.ebuild:
  x86 stable wrt bug #397165

  03 Feb 2012; Brent Baude <ranger@gentoo.org> clusterssh-3.28.ebuild:
  Marking clusterssh-3.28 ppc for bug 397165
