@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol x11-apps/xlsfonts x11-terms/xterm dev-perl/File-Which virtual/perl-Module-Build dev-perl/Test-Pod dev-perl/Test-Differences dev-lang/perl:=[-build(-)]
+DEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol dev-perl/XML-Simple x11-apps/xlsfonts x11-terms/xterm dev-perl/File-Which virtual/perl-Module-Build dev-perl/Test-Pod dev-perl/Test-Differences dev-lang/perl:=[-build(-)]
 DESCRIPTION=Concurrent Multi-Server Terminal Access
 EAPI=5
 HOMEPAGE=http://clusterssh.sourceforge.net
 IUSE=test
 KEYWORDS=amd64 x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol x11-apps/xlsfonts x11-terms/xterm dev-lang/perl:=[-build(-)]
+RDEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol dev-perl/XML-Simple x11-apps/xlsfonts x11-terms/xterm dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/D/DU/DUNCS/App-ClusterSSH-4.01_05.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	1d50a6ea2d8d319e3205b005b3ed0dfa	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=176bd0281824052197227bf9fc8f24a2
+_md5_=ff0a643a8a77687f6584f29901a16488
