@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol x11-apps/xlsfonts x11-terms/xterm dev-perl/File-Which virtual/perl-Module-Build dev-perl/Test-Pod test? ( dev-perl/Test-Differences ) dev-vcs/git || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol dev-perl/XML-Simple x11-apps/xlsfonts x11-terms/xterm dev-perl/File-Which virtual/perl-Module-Build dev-perl/Test-Pod test? ( dev-perl/Test-Differences ) dev-vcs/git || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 DESCRIPTION=Concurrent Multi-Server Terminal Access.
 EAPI=2
 HOMEPAGE=http://clusterssh.sourceforge.net
 IUSE=test
 LICENSE=GPL-2
-RDEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol x11-apps/xlsfonts x11-terms/xterm || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=dev-perl/Exception-Class dev-perl/Readonly dev-perl/Test-Pod dev-perl/Test-Pod-Coverage dev-perl/Test-Trap dev-perl/Test-DistManifest dev-perl/Try-Tiny dev-perl/perl-tk dev-perl/Config-Simple dev-perl/X11-Protocol dev-perl/XML-Simple x11-apps/xlsfonts x11-terms/xterm || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 SLOT=0
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	40081e8c7e7f7c4f9db349a1d6d52925	git-2	2027b81a576527fa16bece425941e094	git-r3	f089608c770d9ad72a2c92b547d2b20d	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	1d50a6ea2d8d319e3205b005b3ed0dfa	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=39c19abedaef9232d93c039988ccbf30
+_md5_=a7085b9dbf7e0aaad1b4e2fb21f509e8
