@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=dev-libs/popt sys-apps/iproute2 dev-libs/libnl:1.1 dev-libs/openssl snmp? ( net-analyzer/net-snmp )
 SLOT=0
-SRC_URI=http://www.keepalived.org/software/keepalived-1.2.11.tar.gz
+SRC_URI=http://www.keepalived.org/software/keepalived-1.2.12.tar.gz
 _eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=1cc02601f1eaded7f1d9a4ab8eb643b9
+_md5_=869063ad11d8528a1a9a9e7925e69aac
