@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX clusterssh-4.01.01-testfix-1.patch 2888 SHA256 b734e9634ff58a84432413d8de37fe5c8b9a6bb25f6a60c263f3087343c5fd29 SHA512 a5fc905e73899e63bae691bfbb8cb92d53570efc9b7349b3d22b76892b9fb5bec6bfd72e04fe8ea1c481ae2d06d462ab69686b6db5efecebb00bbb9da52cf083 WHIRLPOOL 7e55bc5cd00548e2658ba1844a871a371e7d679f8807a7e8a3a29accd39ddb8231ee0c11a15926dce4841e478dc2053890a3b31c45b9ee775b6dbe887f7ae3d0
 DIST App-ClusterSSH-4.01_05.tar.gz 71502 SHA256 e57685ce83aa74a15fef868ac6d7aed11de5c81252db7c65332ad1c9972aaa3e SHA512 4b63b91684c981a28871e5264502c66435b531ae3c4bad2eab2571f8b237d43e5f45ed93d036e7497c713f2982a110d93a3055ae0004d4f33e7786df9aa56ff8 WHIRLPOOL 96df13f6f3096829949b1db8f26d8a2de8b3568597bc1b82d4d26f0fe56a9c303651f2ab58c77fa94f0e494cb90fba9e331de9f242fb0d7bfa4a8eb7796d6c48
-EBUILD clusterssh-4.01.05.ebuild 1169 SHA256 6182e96d9ee0debc86b4ab3016dbc9143c7aa679346d5ef449f085b16e2f81a6 SHA512 13158e15a4c4327110837e83c7dbfa5effde52d939da5884fc1d1e19940426e3c83cc6b498bf64fc5bdf27d62f484ef61b8f371a1a31f53f9f2b4d7fba0349bd WHIRLPOOL cd582489815bda4e8a35a66a2ae7abc4e2ca9d4244c07905e967b4c55530f252429ee218a71300621f6870811e04175afb413033d6378a7dcf550f1dd8f3f813
-EBUILD clusterssh-9999.ebuild 974 SHA256 3d17acfbd8c477ea6075e8e3df7a7ab2b439bf1f41aab67cf723c029591e0cec SHA512 ef80fc8b48db4f181f99545428ebcc6146fcec502243d180a97b95f8d491d190ff118be60c29ae1a99b33aa5e60f760d443acef88a450c0f37b1919bf68fcfa0 WHIRLPOOL 08eb18f8a4f20051289a25a2d60b3068a693db3fd4ef3f131a38359d0fdb9dfae14b7c696a1ffa33c380cd6259655617bab0e5166cbbbdc4aa7989f746fe837c
-MISC ChangeLog 7581 SHA256 37a0bcd9b9fc71cc2521c08f78f55b1e5f75ce83a0a8ffb8a245230d5fd229ce SHA512 f465e7b278152846878a097b65ffcbeef0b1b41353d4592897146a57cd7990eb0c40b0a59baab79bf88abbd36d7b714917d43181ff1db6308a434300170faac6 WHIRLPOOL 3e7c7c6ca44211682be0b294913786c258c5fe3b04eb34db30b4494225adfe8f8420d10371b2d1c85a536fb4c0f984b14c5b0a36e6088f89181e9e4fb89f55db
+EBUILD clusterssh-4.01.05.ebuild 1194 SHA256 0e354c28f47e2090ec8e187bbf80408023c181fef31ea65c89f50cd581f6134b SHA512 d58dfb138464fd59d2e4861f45a2c7d338b557df7d1ce41fbf63c20edbbb400935e44fc8c4f7dfccd57f0fdaa28be2e838ebd66e288c4f5fd8f89d6e10bbd9d3 WHIRLPOOL 920c9fecef2bcbc86724710d14c46fdd6d18333260e52c6ccc935bc3b969d738efe2b92b883f7b0715e28e74be0f2faef0ba4e33959e9f1b18d53f5722081c9d
+EBUILD clusterssh-9999.ebuild 999 SHA256 c1e032c5f9b1cb6d709badf2d514d056fd4c7ed80ebec9a13d1c5f4d0064d5a0 SHA512 43e75ad26ef1756200869b1be801e82a19335a611903f84e42ab23ccbabca0c60798b9c8915cc9ba8f5953db92d111ec455624fc7dc5be17b05d095436f801ae WHIRLPOOL be13d808b845aa80ca17c58dcae61eb56ca171dea126926e8be4b6cf2079bda20ad76e2f2b46927e79af13278c83ee74be85ecb8f5fe003527b42334b0353885
+MISC ChangeLog 7720 SHA256 d5298eef5a5065da8223d62ad10cea91572f1a082c681d17cc32c2d6ffde46c1 SHA512 0007a2b22c75be5807985a64e6e07a6ee51059d8bdc60fe7c2cf8d969450f8862a22e26b0815b089da22600239c7adb547c52dc404960da5d75cb9993ba924f9 WHIRLPOOL b42c6c4bca49be9bc0692ac3df3aa627520f66ec84c5bee0091cc6ffc97aa43f58612972fd5fd3babffd66314fd88bd3b7018c47c199387a56cdefa0b4e78ebc
 MISC metadata.xml 521 SHA256 2d538025400f057833ebc516ac9f46fe0f85bcc89f4a4e9ab832be780cb108e0 SHA512 24b3fafae531c01af0a8871d7b18b6d8f8905d588eafdf00e03b97fbaa29cb70ff437ed00fa40176cb9a7dd7267f5819935bd92c09cfbc1d3afe7c0dc18d7090 WHIRLPOOL 2b44ebfe535aa7249a7c813ad1e8a007ec174645edc0e78e48e755e75dcf8505043a4b719c8f74ca32323f5e7b0dcf670eff438a5bda1775cf520c2f9641eb67
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREKAAYFAlF5SSkACgkQgAnW8HDreRbvewCgruZPhyclTPhl/NF61ckNkwpd
-+QgAoIBTPmUTHLkArv5NSVPCCDpb1oiH
-=wBWo
+iF4EAREIAAYFAlL9/KsACgkQKiQSS7ZY+hMtAgEArKct72H6yMH2l1roj7WaR+eV
+J6dCcPt0TKmeJFLKD9MA/2iiW9OCo+RJ9V/RlW04eqdJoj/JV6z8mDV+/eZ5+Sdg
+=1mHw
 -----END PGP SIGNATURE-----
