@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/clusterssh/clusterssh-4.01.05.ebuild,v 1.4 2013/04/25 15:18:00 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/clusterssh/clusterssh-4.01.05.ebuild,v 1.5 2014/02/14 11:23:18 ultrabug Exp $
 
 EAPI=5
 
@@ -29,6 +29,7 @@ RDEPEND="
 	dev-perl/perl-tk
 	dev-perl/Config-Simple
 	dev-perl/X11-Protocol
+	dev-perl/XML-Simple
 	x11-apps/xlsfonts
 	x11-terms/xterm"
 DEPEND="
