@@ -10,25 +10,25 @@ AUX keepalived-1.2.2-libipvs-fix-backup-daemon.patch 1929 SHA256 4a67e2910cf21db
 AUX keepalived-1.2.2-libipvs-fix-ipv6.patch 1036 SHA256 1f4b1c3b74537b2cd47052a068ee9a71131e14e851952c28d79ef027631f1347 SHA512 29449ebc714d923cfc9fdb1931c4338f5a523120b530a0b0cbebc45796e78f644e0a45202892b618584d9cd279f9065b927aa7dd2ea046751bbd56662ae2758d WHIRLPOOL 75b62c97875d318ab3ced208f8b8e0c66d459164f2928a0907281fa93800b20ff953831c2dc4203bd7cb15f31cb2e14e79b7200052a032d466bbe3f69e591fc7
 AUX keepalived.confd 290 SHA256 d9b21edb2a94ad3cd6560479f0113bd06eda3e31478e0ce60c3569c7518c99f1 SHA512 15fc0e5c850fa8aed9094dc3a0808cca6ad67b4d5db704f0462af8798bd92406fff7b37638e0b385e70dc7216ef877244f9608f5faf3affc5d9d6b00746f77f8 WHIRLPOOL f9da8973d9f6aa36885b50105b8bb6e7c4f097cda4faa8794626d1e95a138365ae197d17b85fb8126ec99b53a5df0603a63d2a77f4cb99890711f2a7600b5b0f
 AUX keepalived.init 912 SHA256 44fe841fa059c8d9a02f9f9b6d3dd6d12bcc42f83ed818795913cdcdcf6c3da7 SHA512 320d797a43b37e37af8684b40738a913ba1854297b63fc9507dacef9ce11e3badea2e9f201376e34f6d2169afe3902d3d4dc1673e9cbf81930d10c085504a1ec WHIRLPOOL 67db38df631eab9aafcbc6dbf7534d9a8d307d82fa676b80a0bf23dda9fdda7be6fa40b3f7b841600e6e58b789e9e2ab236d7d2d1d71aa7fa968a089d6d1e12c
-DIST keepalived-1.2.11.tar.gz 337951 SHA256 6969d0ac669f99b9839377e15608a304cd3d7be6a42d4bc784db63e7dffe87b9 SHA512 8dd146b301f7c1f1489fe1c91a1743f537d5eb48efdd9703152dedd788d19aa6802ec2331dd6433342ee4df685668526994bff8b76c5d12d8c842c848c1d1ddb WHIRLPOOL f9e63f8eb1c476de3125e699b286ad171e693019221bf3abaf29e2b65c3bdd74394ed240dcba373ad4782007896cf52448606e3fac7a71787eafc9952f25c01d
+DIST keepalived-1.2.12.tar.gz 337974 SHA256 7cd5b1c44b9ec805bb70d208db5962f2c2ff42798c2efd10c6f92e263cf549ab SHA512 816d5a4e8aa65bd9509f68290b762e67feac235678e0960d8c80ee81cb1b3f16311c17ca5e885f87d5d4698df8cb6c42b19ebdc9f43be125dffaf31e68ef67be WHIRLPOOL 26d7901ec5baefd851209b080dadb439bb275df325f567aa37a0951d3849275efc46f6e0c3f0649241e674633bd92f08663c6cec93203800ba0575ef4c100ac5
 DIST keepalived-1.2.2.tar.gz 249557 SHA256 4c05dbd149af120506b4f3a66b4016e30d9ad112e4c26a602e28c366705de8c0 SHA512 1ac581c94be846822ef0ea7f3d2084b4a64ebc2cf77f9e41248169daa3319adcdeb8bd2bef2b3ce6630ae620f4b2ab7e9e949881d7efcc3d359004f0ff316ae8 WHIRLPOOL 13ad7a3f97619951f40dd3a7e43253d218b8bb9515c4b9c551125df2d6d6fe1cbf2761e88b54733498adf782aeae10f55ee267c58c297f1765fa86939edc1a00
 DIST keepalived-1.2.7.tar.gz 289380 SHA256 ca345bf706c090574f6c661bb0abc4b53ccd1480a37c53a05de2eceba6573bda SHA512 5919d23ff911825198daa0fe469c408f9236f6ef4ce406cf4590923f01093f6bc4fa9c6c1768605a760fc7858637d98aaef9e0bd408295f9b88acdfbe9bab9ed WHIRLPOOL 284579d9a5c4361bae1d3a3ff451706c4972fef903fbf0411ab7df50fef1794e0a56b6c4641840cf77f83e2c1d728cc9b843a8b12df450bfa10059f918eb3d8e
 DIST keepalived-1.2.8.tar.gz 326927 SHA256 3256b98186c0181694e9566f7767063cef118572db8fd7e300e7f68f3d658b71 SHA512 2ed490695c1ad94c73320179361295d72c89a3dbf5e7bd82690a954a9256fc3a251e26c50f75cf1ec34b3a22fe40bce8bf69355e60c65f63f62e4460e4563fee WHIRLPOOL d3ad319f66959a6de22446d414f96194f4bb8942b3b587b65d0632ea81982255716ca2399954cb6d2eaccf261cbf446cb4067ae2c3a234628831b8f4658468d9
 DIST keepalived-1.2.9.tar.gz 330779 SHA256 fb711dacce95b60eee18f2b89938a9fbebc5096022f17850fd2284f207e41d9d SHA512 042c2b43c6f71d89d510b3514c8110e6057eb7b01d566f4c39a45131e79b12d8376dc6b330b1f0339e8a49507cc8b112e61a98f46116ce7c6d859d05b4d8d717 WHIRLPOOL 255887a26f9c561f9229961c835edf3e22563def594ce55af6d81105db5512ea31484efbfc0fb77234368f55bbbb4994edecf6b00af8399c3fc10f6903e1b6d2
 DIST keepalived_1.2.2-3.diff.gz 9856 SHA256 104213b98e80c5de7c04ff0a409b88c6aad30f727516f26871fa77dcbdc74aa6 SHA512 d42dc7c591e4134e155e4e8db3cb7ccbf5098f02f09cb9ecfc5b18c43f8c497360018e4584b7f77169b15ca0b28ec84f340dd5c336fc53e3338c62bce0fe1478 WHIRLPOOL 4eefb8765fc78365472687af6d2742c1cdb3eb2ee0e3d0570e5c82e478054547797aaa823786bae73a31bc4b752c334ab6e4784f86f457b140b01ef9a72336aa
-EBUILD keepalived-1.2.11.ebuild 1641 SHA256 58fc5b0a16f05be7b4024ef66b18248affe5f425537c098605d9e2c91fc47b70 SHA512 c0427f01aee9e82fb99ab263ad04176c5e95923b91d19f34edc40ee661272d4a3ced5ae5f36b8284f7d08d310529258930e9b4e87c2d355ccf6bb67e202fa1d0 WHIRLPOOL 2104b26c67e4037af5ade389398acc4231c0743adf31adf4803736edaff3c277c567e451e7e3b7adbeda21fff5cbcc0e734038f60836827b6e483d437ca6609d
+EBUILD keepalived-1.2.12.ebuild 1641 SHA256 07f32e8bdfac1b1034b28d6cef5423ea2691f9a633da3ad0865611717ab6d644 SHA512 3339fafed33630e0146c5b0d201a9cb2af7a1e7126370174b8d6aa4401d4fd6b203c4318901b25d27bd4200fb247ef02bdb465accc69eb1be5b67ee463a70375 WHIRLPOOL 4c48d64410c9c6b09ba870549227da2d392ea8c7fb62b77002bd20906b75c2736f7f55781b76b35f67d19544e41cc669deb6926d3ccdb6f4cda8f2b5cc32b789
 EBUILD keepalived-1.2.2-r3.ebuild 1727 SHA256 bde0402c664b29b6431a53bcb271fe7d7839c3d60076077660a7c69ca376a0db SHA512 2b9bbd0e01c4a56ef23e751b634eeeb92f431f95c3954be2fc126c2e235cc2e2b892d4a2f168a506cd6a906a0f263dd6f646ddd04d449db3eb3a08b363998b84 WHIRLPOOL 6760542391d6d79cdc059d3ebafa195879938e7818ddee948cca35e8c2030294cbd20b10318471abc75f7bf6452f4c1be491eded70f8f34d3a1c3342de78b647
 EBUILD keepalived-1.2.2-r4.ebuild 1918 SHA256 0641c5ddd78ad6629f7f62bebaeecd8f2697bb7d8caa9aabb68e1ca1293d0ef5 SHA512 b66fa559cbdcca151aa423c745c4033332fcd35e703ba76a1730de42cc8b4624eabf0550557d537e7e4837fcd6d39542a8540a89a2342cb23dfa59e739fd2d6d WHIRLPOOL 768a7a52074876af5d990992c5632219fed060380a8be0c0b68f48b6c47ad1e6cbe1d4f9f418b08874001bb8810a3090012875e7c3e8eef44aae471db2f51cf9
 EBUILD keepalived-1.2.7-r1.ebuild 1690 SHA256 d186d99127993b59bf3e8bd3b027e1188f1e34289658614433ca3b261b3c53bd SHA512 dbe305075e24fa00e3799c225ec407f1d974dcae77f58b21fe8a4e868c9a0297946d3f2baf0a0c54c61e506e566004bab4aad60454cb0cabbc40a8dba624cfdd WHIRLPOOL a816a28a5f5b6b69e3fca77037aed6568b6bd9962b42d813e4c9d36bdde90070fd645727191628545d55ca05b8db8cf4b9088faac7087a626250c54a665754b3
 EBUILD keepalived-1.2.7-r2.ebuild 1693 SHA256 790b2b24f2f576d679de7d3b4fb5aaf0c8fcca47afd6c18027dfcf03516f1a8a SHA512 46578816ed94401b9e5c51fdec4f1d5f9c640a99d3682ef0bef27caabd8c8b2529edc4ba52e4e8c7088123557a1a6ed96f50e9043ef3f930675e3eb9e0dfe805 WHIRLPOOL 854e74cd2e29fa789309c25ed023eccb715f40d3fffeca085e75ec83344a3cc2f8371049ee201401a7500a81e9b5bf810d15df14822b216d9fbbccde00fc800c
 EBUILD keepalived-1.2.8.ebuild 1690 SHA256 91330f9f665a996af2b1e4208759d3ee3ec4eef494cb25bec6ab9b9c7a9dd52e SHA512 82500d4e2b5540d185c932863053f5912632f817d618e49dea8fcabb65d8633341e29c93941a4e72465f597d58ce13ed2733205e31b2f68a3d4044f4ba61dd8f WHIRLPOOL 52e2947aaccaa64d81da48266e591fb06e67eeadfb04d3ff3a8bbce20ded40fdf546c33902dc5709fe9c9ac2e215cbe3bda07ede1362e0bca00024d285311973
 EBUILD keepalived-1.2.9.ebuild 1690 SHA256 83769f26a1c0c4b152161d7fe92bcec148e6df0315ff91a7f244ef37bc803e54 SHA512 115d94929823b1e55c9d15070a3d4e48e8e7faec5b96f9705cf1495aef7f732b5860b0215f8c9038d4100ce7f73e3925de2a3f2ddcefdc766c15ba7616285cef WHIRLPOOL f38e51373a73865e3485106a0673fa1ab88fc4fd371af16b91e7b124b54335ab229ecfb31fbc65c0627c1326a68330573434b5dcc1121d13ed39939d444fcbc0
-MISC ChangeLog 16393 SHA256 4d8d28bf618ab866f0fa9c2f742d02d0b95071ea9683a326af3507c366a09f89 SHA512 161f573081d3ccba9d3462146215749b466ad83ddd1e051f33f5fb57a595d7982ae2047e497f3465ceecf4d7b56bb98e3ed32f59c340c60a2b53c257a5b7d62f WHIRLPOOL 053b50749ea8e98e154d440fb51c4f4635f7a7eb6b516839335cfbd52680e96c3e8c38b0131fbca863e0c4f85c2cdde05ee716d6cf23f5fa72b85848df73d7d3
+MISC ChangeLog 16562 SHA256 91f2d87a78c57924f6de9ca3c31e21e558952d617b0104d251ad46b78225cbcd SHA512 0b6a9f8e8c5d04934eaff556a2b613bf0a3d5d991fc3f0270f48c16e1750bde5efe549ec6ac2e291b1d9c60147b0f525789f90163cb1d69c75be063bb637e6b9 WHIRLPOOL 4eb9d997b0fb698729d1585eefb7ed7d98a951b3e074cb6f730e27aac106eaaf08ca293a3786d0e1a8f0ed7860eab3161bd666dc9782a0473554ac18e4da0c91
 MISC metadata.xml 272 SHA256 7fde2180ebedf6971ce9767ab11e619ca60ade87b6c32b37c8fbf3a5442d56b1 SHA512 bbcd428fe65136185ff53ce0e44802bf65507d1287afe9071f4f967a8c8e5d0ba2c706196a5b7a9f3c040f710d523d8766493824bea2c050111533a485cdcf9a WHIRLPOOL ed96940f240f8e6fc1c4e2bf8d9b2064ade28255ef6238e048b3d80d8f9334b101e19deb5c1f89f83016c042bbc533b7855d02e3e0d19c5e2582d93fe416a80f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlLr0eQACgkQKiQSS7ZY+hOUcgD+N+w6dea259db62sydHwnIUcH
-gyllExufm5AOEiOOCgsBAMWEzSYGyGq7B3FuVsJdKzTqM2JLinOzCWOQpm7/jmQv
-=1+Qv
+iF4EAREIAAYFAlL9+twACgkQKiQSS7ZY+hPi0wEA4huttnZ5171/tqZQvRh9lP1L
+A1UlUHJz1CJVVRmP9CgA/i8rwxSVEO/splnE0rf68F0Ks6ZvmkaLCKXaKMPBbu++
+=UvDy
 -----END PGP SIGNATURE-----
