@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/keepalived/keepalived-1.2.11.ebuild,v 1.1 2014/01/31 16:39:58 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/keepalived/keepalived-1.2.12.ebuild,v 1.1 2014/02/14 11:15:34 ultrabug Exp $
 
 EAPI=4
 
