@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/clusterssh
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/clusterssh/ChangeLog,v 1.18 2013/04/25 15:18:00 jlec Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/clusterssh/ChangeLog,v 1.19 2014/02/14 11:23:18 ultrabug Exp $
+
+  14 Feb 2014; Ultrabug <ultrabug@gentoo.org> clusterssh-4.01.05.ebuild,
+  clusterssh-9999.ebuild:
+  fix #501048 thx to Neil Bothwick
 
   25 Apr 2013; Justin Lecher <jlec@gentoo.org> -clusterssh-4.01.01.ebuild,
   clusterssh-4.01.05.ebuild, clusterssh-9999.ebuild:
